2010-06-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14677: htmlArea RTE: Toolbar state incorect in the absence of block element

2010-06-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14674: Replace calls to t3lib_extMgm:: within t3lib_extMgm to self:: due to performance reasons (Thanks to Sebastian Michaelsen)
	* Fixed bug #14676: Replace calls to t3lib_iconWorks:: within t3lib_iconWorks to self:: due to performance reasons (Thanks to Sebastian Michaelsen)
	* Fixed bug #14675: Replace calls to t3lib_BEfunc:: within t3lib_BEfunc to self:: due to performance reasons (Thanks to Sebastian Michaelsen)
	* Follow-up to bug #13611: Replace calls to t3lib_div:: within t3lib_div to self:: du to performance reasons (Thanks to Sebastian Michaelsen)
	* Fixed bug #14555: early thrown debug messages are not visible (BE only) (Thanks to Stefan Galinski)
	* Fixed bug #14628: Open t3lib_db for own instance
	* Follow-up to bug #8305: SQL debug output is not shown in the Backend
	* Fixed bug #14618: Bug: Add debug feature to Ext Direct (Thanks to Fabien Udriot)
	* Follow-up to bug #8305: SQL debug output is not shown in the Backend
	* Added test case t3lib_utility_clientTest.php
	* Fixed bug #14458: getBrowserInfo fails with IE UA Strings

2010-06-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Added feature #14666: Caching framework: Backport PhpFrontend from FLOW3 and refactor FileBackend
	* Added feature #14655: Caching framework: Implement PDO backend

2010-06-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual.
	* Fixed bug #14662: htmlArea RTE: Should use t3lib_utility_Client::getBrowserInfo
	* Fixed bug #13062: htmlArea RTE: "non-floating" float value doesn't stick on images
	* Fixed bug #13301: htmlArea RTE: textstyle cannot be applied to full content of block element

2010-06-08  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed formatting of t3lib_PageRenderer_testcase